<?xml version="1.0" encoding="utf-8"?>

<!--InfoActivity layout defined-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/layout_margin"
    android:background="@color/light_gray"
    tools:context=".ui.main.view.InfoActivity">

    <TextView
        android:id="@+id/about_title"
        style="@style/Title01Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:paddingTop="30dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/about_description"
        style="@style/Body_HintStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_title" />

    <TextView
        android:id="@+id/designAndDev"
        style="@style/Title01Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_and_development"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_description" />

    <ImageView
        android:id="@+id/dtt_logo"
        android:layout_width="124dp"
        android:layout_height="73dp"
        android:layout_marginStart="@dimen/layout_margin"
        android:contentDescription="@string/dttLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/designAndDev"
        app:srcCompat="@drawable/dtt_banner" />

    <TextView
        android:id="@+id/by_dtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_dtt"
        style="@style/Body_HintStyle"
        app:layout_constraintStart_toEndOf="@+id/dtt_logo"
        app:layout_constraintTop_toBottomOf="@+id/designAndDev" />

    <TextView
        android:id="@+id/dttWebsite"
        style="@style/Body_HintStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:linksClickable="true"
        android:autoLink="web"
        android:text="@string/dtt_website"
        android:textColor="#00838F"
        app:layout_constraintStart_toEndOf="@+id/dtt_logo"
        app:layout_constraintTop_toBottomOf="@+id/by_dtt"
        tools:ignore="TouchTargetSizeCheck"
        android:focusable="true" />

    <!--    for creating the shadow effect-->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintBottom_toTopOf="@id/toolBar"
        android:background="@drawable/top_shadow" />

    <include
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/bottom_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>