<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/detailimage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/detailimage"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/houseImage"
            app:layout_constraintTop_toBottomOf="@+id/zip">

            <TextView
                android:id="@+id/detailprice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="$45,000"
                style="@style/Title01Style"/>

            <ImageView
                android:id="@+id/bed_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/bed"
                app:srcCompat="@drawable/ic_bed" />

            <TextView
                android:id="@+id/detailamountofbed"
                style="@style/DetailStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/gothamssm_book"
                android:text="@string/amount_of_bed" />

            <ImageView
                android:id="@+id/bath_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/bath"
                app:srcCompat="@drawable/ic_bath" />

            <TextView
                android:id="@+id/detailamountofbath"
                style="@style/DetailStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/amount_of_bath" />

            <ImageView
                android:id="@+id/layer_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/floor"
                app:srcCompat="@drawable/ic_layers" />

            <TextView
                android:id="@+id/detailfloorarea"
                style="@style/DetailStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/floor_m2" />

            <ImageView
                android:id="@+id/location_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/location"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/detaillocationdistance"
                style="@style/DetailStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            style="@style/Title01Style"/>

        <TextView
            android:id="@+id/createdDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Title03Style"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location"
            style="@style/Title01Style"/>
        <TextView
            android:id="@+id/longitudedetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Title03Style"/>
        <TextView
            android:id="@+id/latitudedetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Title03Style"/>

       <!-- <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="16dp" />-->



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>