<?xml version="1.0" encoding="utf-8"?>

<!--Empty search list layout defined-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_gray">

    <TextView
        android:id="@+id/DTT_real"
        style="@style/Title01Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dtt_real_estate"
        android:layout_alignParentTop="true"/>

    <SearchView
        android:id="@+id/Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/dark_gray"
        android:clickable="true"
        android:closeIcon="@drawable/ic_close"
        android:focusable="true"
        android:searchIcon="@drawable/ic_search_xml"
        android:layout_below="@id/DTT_real">

    </SearchView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Search"
        android:fillViewport="true"
        >

        <ImageView
            android:id="@+id/emptysearch_image"
            android:layout_width="wrap_content"
            android:layout_height="450dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/search_state_empty">

        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Body_HintStyle"
            android:text="No results found!\nPerhaps try another search?"
            android:gravity="center"
            android:layout_below="@id/emptysearch_image"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/homebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_gray"
            android:contentDescription="@string/home_button"
            app:srcCompat="@drawable/ic_home"
            app:tint="@color/black"
            tools:ignore="RedundantDescriptionCheck"
            />

        <ImageButton
            android:id="@+id/infobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_gray"
            android:contentDescription="@string/info_button"
            app:srcCompat="@drawable/ic_info"
            app:tint="@color/medium"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />
    </LinearLayout>

</RelativeLayout>